--- a/Page Views.ipynb
+++ b/Page Views.ipynb
@@ -205,6 +205,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "02387d3a-37cc-4b64-94b0-db8d8b185ca5",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: justify; font-size: 20px; color: #007acc; font-family: Garamond; font-weight: bold\">\n",
+    "    Draw the Bar Chart\n",
+    "</div>\n",
+    "<div style=\"text-align: justify; font-size: 14px; color: #000000; font-family: Garamond; font-weight: bold\">\n",
+    "   Prepare the data and define draw_bar_plot to show average monthly page views grouped by year.\n",
+    "</div>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 193,
    "id": "791c2de1-8dc0-4c93-8fa3-d10128701fe6",
