--- a/Page Views.ipynb
+++ b/Page Views.ipynb
@@ -210,10 +210,10 @@
    "metadata": {},
    "source": [
     "<div style=\"text-align: justify; font-size: 20px; color: #007acc; font-family: Garamond; font-weight: bold\">\n",
-    "    Draw the Bar Chart\n",
+    "    Draw the Box Plots\n",
     "</div>\n",
     "<div style=\"text-align: justify; font-size: 14px; color: #000000; font-family: Garamond; font-weight: bold\">\n",
-    "   Prepare the data and define draw_bar_plot to show average monthly page views grouped by year.\n",
+    "   Transform the data for draw_box_plot.\n",
     "</div>"
    ]
   },
